RESOLVED FIXED195686
Prevent checked_cf_cast crashes in ResourceResponse::platformCertificateInfo
https://bugs.webkit.org/show_bug.cgi?id=195686
Summary Prevent checked_cf_cast crashes in ResourceResponse::platformCertificateInfo
Alex Christensen
Reported 2019-03-13 11:12:38 PDT
Prevent checked_cf_cast crashes in ResourceResponse::platformCertificateInfo
Attachments
Patch (4.03 KB, patch)
2019-03-13 11:14 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2019-03-13 11:14:25 PDT
Alex Christensen
Comment 2 2019-03-13 11:45:47 PDT
Radar WebKit Bug Importer
Comment 3 2019-03-13 11:46:21 PDT
Note You need to log in before you can comment on or make changes to this bug.