Prevent checked_cf_cast crashes in ResourceResponse::platformCertificateInfo https://bugs.webkit.org/show_bug.cgi?id=195686

Reviewed by Tim Horton.

This covers up a type confusion bug on some OSes until rdar://problem/48853137 is resolved.

* SourcesCocoa.txt:
* WebCore.xcodeproj/project.pbxproj:
* platform/network/cocoa/ResourceResponseCocoa.mm:



Canonical link: https://commits.webkit.org/209986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242895 268f45cc-cd09-0410-ab3c-d52691b4dbfc